@@ -1,0 +1,15 @@
+## other accessor methods (some trivial)
+
+coef.glmm.admb <- function(object, ...) {
+  object$b
+}
+
+residuals.glmm.admb <- function(object, ...) {
+  object$residuals
+}
+
+fitted.glmm.admb <- function(object, ...) {
+  object$fitted
+}
+
+ 
